--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: polymath_no_grief
-version: '1.0-alpha'
+version: 'alpha-release'
 main: nogrief.NoGrief
 api-version: '1.21'
 authors: [ Armen Hovhannisyan ]
